# rag-chatbot-v1

./: .env.example  .gitignore  README.md  test.rest
rag-backend/: .env  .gitignore  chromaDB.py  cli_chatbot_client.py  client-experimental.py  echo.py  main.py  mcp-client.py  mcp-test-client.py  mcp_client.py  playground.py  pyproject.toml  server.py  server_test.py
rag-backend/chromaDbData/62f0571b-737a-4549-9b00-22d1485564fc/: index_metadata.pickle
rag-frontend/: main.py  pyproject.toml
